Fix text align

--- a/blog/static/style/base.css
+++ b/blog/static/style/base.css
@@ -105,3 +105,7 @@ button {
 a {
     cursor: pointer;
 }
+
+#post-content {
+    text-align: left;
+}
